Updated by task 'MD_MANUAL_HANDOFF_1721171533931'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/38946bebc2e663fc6ac9e03e200d179f0916b433

--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -7,8 +7,8 @@ author: mfrei
 exl-id: e652b5bf-d209-4eeb-89fc-af584939d5c5
 source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
 workflow-type: tm+mt
-source-wordcount: '6494'
-ht-degree: 98%
+source-wordcount: '5909'
+ht-degree: 97%
 
 ---
 
@@ -37,7 +37,7 @@ ht-degree: 98%
 * [Experience Manager](#aem)
 * [Campaign](#ac)
 * [Advertising Cloud](#adcloud)
-* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html)
+* [[!DNL Target]](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=zh-Hant)
 * [[!DNL Magento]](#magento)
 * [[!DNL Marketo Engage]](#marketo)
 * [[!DNL Primetime]](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
@@ -72,7 +72,7 @@ Adobe Experience Platform 現有功能更新：
 
 針對 Experience Platform 和服務所發佈的新影片、教學課程或其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 8 月 17 日 | [對 Launch 實作除錯](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/debug-launch-implementation.html) | 影片 | 介紹 Launch 實作除錯所需的幾項工具和技巧。了解如何使用瀏覽器的開發人員主控台和 Experience Platform Debugger 擴充功能，識別及疑難排解 Launch 實作的重大問題。 |
 | 2020 年 8 月 17 日 | [建立 Launch Cloud Service 設定](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/create-launch-cloud-service.html) | 影片 | 了解如何建立新的 Launch Cloud Services 設定。Launch Cloud Service 設定隨後可套用至現有的 Site，在「作者」和「發佈」環境中都能看見系統載入 Launch 資料庫。 |
@@ -95,13 +95,13 @@ Adobe Experience Platform 現有功能更新：
 
 針對 [!UICONTROL Journey Orchestration] 發佈的新影片、教學課程和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 8 月 10 日 | [使用區段資格事件](https://experienceleague.adobe.com/docs/journey-orchestration-learn/tutorials/using-segment-qualification-events.html) | 影片 | 影片概要介紹如何以[!UICONTROL 區段資格]事件作為進入點或退出點，以此建立歷程。 |
 
 ### Journey Orchestration 的其他資源
 
-[文件](https://experienceleague.adobe.com/docs/journeys/using/journey-orchestration-home.html) - [版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html) - [做法影片](https://experienceleague.adobe.com/docs/platform-learn/tutorials/journey-orchestration/introduction.html?lang=zh-Hant)
+[文件](https://experienceleague.adobe.com/docs/journeys/using/journey-orchestration-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/platform-learn/tutorials/journey-orchestration/introduction.html?lang=zh-Hant)
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
@@ -122,7 +122,7 @@ Adobe Experience Platform 現有功能更新：
 | 蒐集中國資料 (第 2 階段) | 2020 年 9 月 1 日 | 擴大支援第一方 SSL。 |
 | 工作區新增日期範圍 | 2020 年 9 月 10 日 | 新增 5 個日期範圍，您可以選擇以下日期範圍，排除不完整的當天資料：過去 7 天、過去 14 天、過去 30 天、過去 60 天、過去 90 天 |
 | 工作區：下載單一維度的 50,000 個項目 | 2020 年 9 月 17 日 | 您將能以自由格式表格，針對單一維度下載 50,000 個項目，並套用區段和篩選條件。這可讓您存取 Analysis Workspace 以外超過 400 列的資料。[更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/download-send.html#download-items) |
-| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺化效果的 x 軸與 y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [了解更多...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=zh-Hant) |
+| 工作區：改良[!UICONTROL 線條]視覺化 | 2020 年 9 月 17 日 | <ul><li>您可以顯示或隱藏任何[!UICONTROL 線條]視覺化效果的 x 軸與 y 軸。當[!UICONTROL 線條]視覺化效果較為精簡時，這項功能可說相當實用。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋最小值和最大值標籤，以迅速突顯量度的高低值。</li><li>您可以在任何[!UICONTROL 線條]視覺化效果上覆蓋不同的迴歸趨勢線，以便輕鬆查看資料趨勢。選項包括[!UICONTROL 線性]、[!UICONTROL 對數]、[!UICONTROL 指數]、[!UICONTROL 冪]和[!UICONTROL 二次方程式]。</li></ul> [了解更多...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
 
 ### Customer Journey Analytics 新功能 {#cust-journey}
 
@@ -141,7 +141,7 @@ Adobe Experience Platform 現有功能更新：
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
-* 修正無法篩選的問題 [!UICONTROL 工作區] 欄的「未指定」維度。 (AN-222393)
+* 修正「未指定」維度無法篩選[!UICONTROL Workspace]欄的問題。 (AN-222393)
 * 修正[!UICONTROL 排程專案]無法傳送的連線逾時問題。(AN-223916)
 * 修正[!UICONTROL 虛擬報表套裝]中，[!UICONTROL 「造訪」]區段無法正常運作的問題。(AN-225719)
 * 修正 Adobe Report Builder 中的 Chrome 瀏覽器版本問題。(AN-226718)
@@ -172,19 +172,19 @@ AN-215683、AN-216894、AN-226370、AN-227138、AN-227154、AN-227328、AN-22748
 | 全新 Adobe Analytics 預設登陸頁面 | 生效日期：2020 年 6 月 18 日 | 2020 年 6 月 18 日起，Adobe Analytics 的預設登陸頁面將從[!UICONTROL 報告]變更為[!UICONTROL 工作區]。未設定自訂登陸頁面的使用者，將一律適用此變更。 |
 | 變更[!UICONTROL 工作區]計算[!UICONTROL 輸入/結束]次數的方式 | 2020 年 4 月 7 日 | 自 2020 年 3 月起，[!UICONTROL Analysis Workspace] 已變更&#x200B;_「無」_&#x200B;值與[!UICONTROL 輸入/結束]動作的互動方式。由於您現在可以在 [!UICONTROL Analysis Workspace] 中開啟或關閉&#x200B;_「無」_，因此我們會在使用者輸入或結束後套用&#x200B;_「無」_，但 (eVars) 以往都是在輸入或結束之前就先套用。例如，假設造訪事件的第一次點擊未輸入 eVars 的值，但第二次點擊則有輸入。在 [!UICONTROL Reports &amp; Analytics] 中，第一次點擊的輸入會顯示為&#x200B;_「未指定」_，但在 [!UICONTROL Analysis Workspace] 中則會顯示第二次點擊的值。 |
 | **[!UICONTROL 控制面板封存]**&#x200B;確定汰除 | 2020 年 3 月 27 日 | 自 2020 年 10 月起，[!UICONTROL Reports &amp; Analytics] 中&#x200B;**[!UICONTROL 「管理控制面板」]**&#x200B;底下的&#x200B;**[!UICONTROL 「檢視封存」]**&#x200B;設定將不再提供使用。 |
-| Analytics Legacy API 終止服務 | 2020 年 1 月 9 日 | 自 2020 年 11 月起，下列 Analytics Legacy API 服務將終止並關閉。透過這些服務建立的整合應用將會停止運作。 <ul><li>1.3 Analytics API</li><li>1.4 SOAP Analytics API</li><li>Legacy OAuth 驗證 (OAuth 和 JWT)</li></ul>我們提供 [Legacy API EOL 常見問題集](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email)，以協助回答您的問題，並指引您展開後續操作。採用這些服務的 API 整合應用可移轉為 [1.4 Analytics REST API](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) 或 [2.0 Analytics API](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email)。Legacy OAuth 帳戶可移轉為 [Adobe Developer](https://console.adobe.io/home?mv=email) Analytics 整合帳戶，藉以存取 1.4 Analytics API 和 2.0 Analytics API。 |
+| Analytics Legacy API 終止服務 | 2020 年 1 月 9 日 | 自 2020 年 11 月起，下列 Analytics Legacy API 服務將終止並關閉。透過這些服務建立的整合應用將會停止運作。 <ul><li>1.3 Analytics API</li><li>1.4 SOAP Analytics API</li><li>Legacy OAuth 驗證 (OAuth 和 JWT)</li></ul>我們提供 [Legacy API EOL 常見問題集](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email)，以協助回答您的問題，並指引您展開後續操作。採用這些服務的 API 整合應用可移轉為 [1.4 Analytics REST API](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) 或 [2.0 Analytics API](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email)。Legacy OAuth帳戶可移轉為[Adobe Developer](https://console.adobe.io/home?mv=email) Analytics整合帳戶，藉以存取1.4 Analytics API和2.0 Analytics API。 |
 | San Jose FTP Broker 結束倫敦和新加坡的業務 | 2020 年 7 月 | 若為倫敦和新加坡的客戶，我們將不再於倫敦或新加坡與聖荷西資料中心 [ftp.omniture.com](ftp://ftp.omniture.com/) 之間支援資料代理。<br/><ul><li>如果您是在倫敦，請使用 [ftp3.omniture.com](ftp://ftp3.omniture.com/)</li><li>如果您是在新加坡，請使用 [ftp4.omniture.com](ftp://ftp4.omniture.com/)</li></ul> |
 | 終止 Ad Hoc Analysis 服務 | 2018 年 8 月 6 日 | Adobe 已宣佈有意終止 Ad Hoc Analysis 服務。我們將會在確定後公佈服務終止日期。如需詳細資訊，請造訪[探索工作區](https://spark.adobe.com/page/S9Bhp66VJ2fEn/)。 |
 
 ### AppMeasurement {#appm}
 
-如需 AppMeasurement 發行的最新消息，請參閱[適用於 JavaScript 的 AppMeasurement 發行說明](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html)。
+如需 AppMeasurement 發行的最新消息，請參閱[適用於 JavaScript 的 AppMeasurement 發行說明](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=zh-Hant)。
 
 ### Analytics 課程與教學課程 {#tutorials-analytics}
 
 [!DNL Analytics] 和 [!UICONTROL Customer Journey Analytics] 的最新課程、教學課程和文章。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 8 月 30 日 | [在 Analysis Workspace 中儲存、共用及協作專案](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/curate-and-share-projects/saving-sharing-and-collaborating-on-projects-in-analysis-workspace.html) | 影片 | 了解如何在 [!UICONTROL Analysis Workspace] 中為表格新增文字說明、建立專案的直接連結及共用專案。 |
 | 2020 年 8 月 28 日 | [課程簡介 - 將值歸因於 Customer Journey 中的數位接觸點](https://video.tv.adobe.com/v/39380) | 影片 | 此入門影片主要說明[將值歸因於 Customer Journey 中的數位接觸點](https://experienceleague.adobe.com/?recommended=Analytics-U-1-2020.2)課程的先決條件和課程內容。 |
@@ -220,14 +220,14 @@ Audience Manager 的新功能、修正項目、說明文件和教學課程。
 
 針對 Audience Manager 發佈的新影片、教學課程或其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 8 月 17 日 | [將 Audience Manager 區段對應至目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/mapping-audience-manager-segments-to-destinations.html) | 影片 | 介紹 Audience Manager 中的各種目的地類型，並說明將區段對應至各個目的地類型的詳細資訊。 |
 | 2020 年 8 月 14 日 | [充分運用設定檔合併規則：秘訣、技巧和策略](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/profile-merge/customer-tips-getting-the-most-out-of-profile-merge-rules.html) | 文章 | 由 [!DNL Accordant] 多重解決方案顧問 Varun Kalra 傳授選擇及使用[!UICONTROL 設定檔合併規則]的秘訣。 |
 | 2020 年 8 月 14 日 | [特徵和區段最佳作法](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/customer-tips-traits-and-segments-best-practices.html) | 文章 | 由 [!DNL Ally Financial] 資深行銷專員 Matt Vittorioso 傳授管理特徵的秘訣。 |
 | 2020 年 8 月 12 日 | [了解及設定 Google 目標客戶比對以人物為基礎的目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/data-activation/people-based-destinations/understanding-and-configuring-the-google-customer-match-pbd.html) | 影片 | 影片會逐步帶您了解 Google 目標客戶比對[!UICONTROL 以人物為基礎的目的地]的詳細資訊和使用案例，包括逐步說明如何建立區段及對應至目的地。此外，影片也會示範 Google Ad Console 中的受眾登陸作業。 |
 | 2020 年 8 月 13 日 | [課程簡介 - 對象區段建立與策略](https://video.tv.adobe.com/v/39091) | 影片 | 此影片提供「對象區段建立與策略」課程的內容說明。 |
-| 2020 年 8 月 13 日 | [建立區段時使用程式碼檢視](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/using-code-view-when-building-segments.html) | 影片 | 了解如何使用程式碼檢視來定義區段，並且建立複雜的特徵組合，包括使用造訪間隔和頻率。 |
+| 2020 年 8 月 13 日 | [在建立區段時使用程式碼檢視](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/using-code-view-when-building-segments.html) | 影片 | 了解如何使用程式碼檢視來定義區段，並且建立複雜的特徵組合，包括使用造訪間隔和頻率。 |
 | 2020 年 8 月 21 日 | [對象區段建立與策略](https://experienceleague.adobe.com/?recommended=AudienceManager-U-1-2020.2) | 課程 | 本課程會詳細介紹區段，告訴您如何建立及管理區段，以及如何對目的地合作夥伴啟用區段。您可以查看幾個實用的使用案例，甚至向客戶學習幾項秘訣和技巧。 |
 
 ## ![圖示](/assets/aem.png) Adobe Experience Manager {#aem}
@@ -324,7 +324,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 
 過去一個月內發佈的新影片、教學課程和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 8 月 31 日 | [設定 XDP 範本，善用 AEM Forms 和 Adobe Sign 整合](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/forms-and-sign/using-xdp-templates-with-adobe-sign.html) | 影片 | 透過 [!UICONTROL AEM Forms] 和 Sign 整合，善用現有的 XDP 範本。 |
 | 2020 年 8 月 25 日 | [為 2 位簽署者設定最適化表單](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/forms-and-sign/configure-adaptive-form-for-two-signers.html) | 影片 | 使用 Adaptive Forms 介面設定多位簽署者，並指定順序 (接續或同時簽署)。 |
@@ -351,10 +351,10 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 * [AEM Cloud Manager 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/using/release-notes/release-notes-current.html)
 * [Automated Forms Conversion Service 版本注意事項](https://experienceleague.adobe.com/docs/aem-forms-automated-conversion-service/using/release-notes.html)
 * [AEM 6.5 Service Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/service-pack/sp-release-notes.html)
-* [AEM 6.4 Cumulative Fix Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html)
-* [AEM Assets Dynamic Media 版本注意事項](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html)
-* [AEM Brand Portal 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html)
-* [AEM 桌面應用程式版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html)
+* [AEM 6.4 Cumulative Fix Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html?lang=zh-Hant)
+* [AEM Assets Dynamic Media 版本注意事項](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html?lang=zh-Hant)
+* [AEM Brand Portal 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
+* [AEM 桌面應用程式版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html?lang=zh-Hant)
 * [AEM Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html)
 * [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
 * [Livefyre 發行說明](https://experienceleague.adobe.com/docs/livefyre/using/release-notes/c-rn.html)
@@ -395,9 +395,9 @@ Campaign Classic、Campaign Standard 和控制面板的發行資訊。
 
 ### 說明資源
 
-* Adobe Campaign Standard：[說明中心](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-standard-tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html) - [最新文件更新內容](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html)
-* Adobe Campaign Classic：[說明中心](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-classic-tutorials/overview.html)- [最新文件更新內容](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html)
-* Adobe Campaign 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html) - [版本注意事項](https://experienceleague.adobe.com/docs/control-panel/using/release-notes.html?lang=zh-Hant)- [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/administrating/control-panel/control-panel-overview.html) / [Campaign Classic](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/administrating/control-panel-acc/control-panel-overview.html) 做法影片
+* Adobe Campaign Standard：[說明中心](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-standard-tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新內容](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* Adobe Campaign Classic：[說明中心](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-classic-tutorials/overview.html)- [最新文件更新內容](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
+* Adobe Campaign控制面板： [檔案](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes.html?lang=zh-Hant) - [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/administrating/control-panel/control-panel-overview.html) / [Campaign Classic](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/administrating/control-panel-acc/control-panel-overview.html)的做法影片
 
 ## ![圖示](/assets/advertising-cloud.png) Advertising Cloud {#adcloud}
 
@@ -410,7 +410,7 @@ Adobe Advertising Cloud 發行說明。
 
 | 功能 | 說明 |
 | -----------| ---------- |
-| 延長互動式影片前置內容的時間，加入 VAST 詳細目錄支援 | 現在，每個互動式影片前置內容版位和廣告均可支援 VPAID 和 VAST 詳細目錄。**注意：** 如果您的主要KPI是檢視功能，請繼續建立個別的VPAID和VAST版位和廣告，因為可視度曝光率不適用於VAST廣告。 |
+| 延長互動式影片前置內容的時間，加入 VAST 詳細目錄支援 | 現在，每個互動式影片前置內容版位和廣告均可支援 VPAID 和 VAST 詳細目錄。**注意：**&#x200B;如果您的主要KPI是檢視功能，請繼續建立個別的VPAID和VAST版位和廣告，因為可視度曝光率不適用於VAST廣告。 |
 
 ### [!UICONTROL Advertising Cloud Search] 新功能 {#adcloud-search}
 
@@ -435,7 +435,7 @@ Adobe Advertising Cloud 發行說明。
 
 ### Marketo Engage 核心更新
 
-如需最新版本的資訊，請參閱 [!DNL Marketo] [發行說明](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html)。
+如需最新版本的資訊，請參閱 [!DNL Marketo] [發行說明](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
 
 ### 即將推出的功能
 
