--- a/c-legacy-releases/2022/08172022.md
+++ b/c-legacy-releases/2022/08172022.md
@@ -13,7 +13,7 @@ ht-degree: 99%
 
 ---
 
-# Experience Cloud版本注意事項 — 2022年8月
+# Experience Cloud 發行說明 - 2022 年 8 月
 
 ![橫幅](assets/release-notes-header.png)
 
@@ -128,7 +128,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 上次更新：**2022 年 3 月 23 日**
 
-* [!DNL Streaming Media Analytics] [版本注意事項](https://experienceleague.adobe.com/zh-hant/docs/media-analytics/using/additional-resources/release-notes.html?lang=zh-Hant)
+* [!DNL Streaming Media Analytics] [版本注意事項](https://experienceleague.adobe.com/docs/media-analytics/using/additional-resources/release-notes.html)
 * [!DNL Streaming Media Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html?lang=zh-Hant)
 
 ## ![圖示](/assets/audience-manager.png) Audience Manager {#aam}
