--- a/c-legacy-releases/2022/10052022.md
+++ b/c-legacy-releases/2022/10052022.md
@@ -13,7 +13,7 @@ ht-degree: 98%
 
 ---
 
-# Experience Cloud版本注意事項 — 2022年10月
+# Experience Cloud 發行說明 - 2022 年 10 月
 
 ![橫幅](assets/release-notes-header.png)
 
@@ -132,7 +132,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2022 年 10 月 | [Analysis Workspace 中的組合圖表](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/combo-charts.html) | 影片 | 了解 Analysis Workspace 中的組合圖表視覺效果。 |
-| 2022 年 9 月 | [建立流量視覺效果](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/analyzing-customer-journeys/flow-visualization.html?lang=zh-Hant) | 影片 | 了解如何使用流量視覺效果來探索客戶在與您的品牌互動時所擁有的確切旅程。 |
+| 2022 年 9 月 | [建立流量視覺效果](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/analyzing-customer-journeys/flow-visualization.html) | 影片 | 了解如何使用流量視覺效果來探索客戶在與您的品牌互動時所擁有的確切旅程。 |
 
 {style="table-layout:auto"}
 
@@ -159,7 +159,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 ## ![圖示](/assets/analytics.png) [!DNL Streaming Media Analytics] {#sma}
 
-* [!DNL Streaming Media Analytics] [發行說明](https://experienceleague.adobe.com/zh-hant/docs/media-analytics/using/additional-resources/release-notes.html?lang=zh-Hant)
+* [!DNL Streaming Media Analytics] [發行說明](https://experienceleague.adobe.com/docs/media-analytics/using/additional-resources/release-notes.html)
 * [!DNL Streaming Media Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html?lang=zh-Hant)
 
 ## ![圖示](/assets/audience-manager.png) Audience Manager {#aam}
@@ -499,7 +499,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL Portfolio]， [!UICONTROL 行銷活動] | (選擇加入 Beta 版功能) 新的「[!UICONTROL 網路支出條件約束]」選項可讓您為多網路產品組合中的特定廣告網路定義預算分配限制。該選項適用於具有每日、每周和每月支出策略的產品組合，且僅當「[!UICONTROL 啟用行銷活動最大支出目標 %]」選項未啟用時。當「[!UICONTROL 自動調整行銷活動預算限制]」選項選取時，條件約束會在為多個和最低行銷活動預算設定的值範圍內作用。<br><br>基本報告中的新網路條件約束報告會顯示所有指定的最小和最大搜尋引擎預算以及您的產品組合的實際支出 (成本)。<br><br>若要參與測試版計劃，請連絡您的客戶團隊。 |
+| [!UICONTROL Portfolio]，[!UICONTROL 行銷活動] | (選擇加入 Beta 版功能) 新的「[!UICONTROL 網路支出條件約束]」選項可讓您為多網路產品組合中的特定廣告網路定義預算分配限制。該選項適用於具有每日、每周和每月支出策略的產品組合，且僅當「[!UICONTROL 啟用行銷活動最大支出目標 %]」選項未啟用時。當「[!UICONTROL 自動調整行銷活動預算限制]」選項選取時，條件約束會在為多個和最低行銷活動預算設定的值範圍內作用。<br><br>基本報告中的新網路條件約束報告會顯示所有指定的最小和最大搜尋引擎預算以及您的產品組合的實際支出 (成本)。<br><br>若要參與測試版計劃，請連絡您的客戶團隊。 |
 | 行銷活動、Bulksheet、報告 | ([!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 以下支援現在可用於 [!DNL Microsoft Audience Network] 上的行銷活動：<ul><li>您現在可以在「[!UICONTROL 行銷活動]」檢視中使用 Bulksheet 建立、編輯和變更對象行銷活動的狀態 (行銷活動類型「[!UICONTROL 對象 (圖片)]」或「[!UICONTROL 對象 (摘要)]」)、廣告群組 (廣告群組類型「[!UICONTROL 對象]」) 和廣告 (創意類型「[!UICONTROL 回應式廣告]」)。</li><li>您現在可以在「[!UICONTROL 行銷活動]」檢視中，檢視現有對象行銷活動，以表格和趨勢圖表格式呈現成效資料。廣告層級的成效資料也可在報告和 Adobe Analytics 中使用 (適用於與 [!DNL Analytics] 整合的廣告商)。</li></ul>最佳化支援將在未來版本中提供。 |
 |  | ([!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 您現在可以在[!UICONTROL 行銷活動]檢視中使用 Bulksheet，在搜尋行銷活動中建立和管理多媒體廣告。廣告具有創意類型「[!UICONTROL 多媒體廣告]」。<br><br>您可以將含多媒體廣告的行銷活動包含在，含有任何支出策略的標準產品組合或混合產品組合中，[!UICONTROL 目標曝光比重]除外 (混合產品組合尚未支援)。<br><br>您現在可以在「[!UICONTROL 行銷活動]」檢視中，檢視現有對象行銷活動，以表格和趨勢圖表格式呈現成效資料。廣告層級的成效資料也可在報告和 [!DNL Analytics] 中使用 (適用於與 [!DNL Analytics] 整合的廣告商)。 |
 | [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 發佈者曝光比重量度現在可作為下列行銷活動管理檢視和報告中的欄：<ul><li>行銷活動管理檢視：所有行銷活動實體檢視，[!UICONTROL 廣告]除外。<b>請注意：</b>無法從廣告網路取得廣告層級資料。</li><li>基本報告：除了[!UICONTROL 廣告變體]、[!UICONTROL 每小時行銷活動]和[!UICONTROL 網路條件約束]報告的所有報告。<b>請注意：</b>無法從廣告網路取得廣告層級資料。</li><li>專業報告：[!UICONTROL Adwords 和 Bing 對象目標]、[!UICONTROL 行銷活動每日曝光比重]和[!UICONTROL 關鍵字每日曝光比重]報告。</li></ul><b>請注意：</b>因為[!UICONTROL 行銷活動每日曝光比重]和[!UICONTROL 關鍵字每日曝光比重] 報告現在是多餘的，在未來版本將被刪除。如果您將這些報告類型用於排程報告、範本或試算表摘要，請轉換改用[!UICONTROL 行銷活動]和[!UICONTROL 關鍵字]報告。與此同時，一些現有量度在這些報告類型中重複。 |
@@ -556,7 +556,7 @@ Last updated: **August 9, 2022**
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 9 月 | [使用Adobe Fonts解決字型問題](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/TamingTypeAnxiety.pdf) | PDF | 在這個動手教學課程中了解 Adobe Fonts 的運作方式。 |
+| 2022 年 9 月 | [使用Adobe Fonts解決字型焦慮](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/TamingTypeAnxiety.pdf) | PDF | 在這個動手教學課程中了解 Adobe Fonts 的運作方式。 |
 | 2022 年 9 月 | [內容創作者適用的 Adobe Acrobat](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/assets/AcrobatforContentCreators.pdf) | PDF | 作為內容創作者，您可能需要產生 PDF，然後定期在 Adobe Acrobat 中查看這些 PDF 檔案。但是，Acrobat 中還包括許多有助於簡化傳統創意工作流程的工具。學習兩個專門的工具：「[!UICONTROL 與他人共用]」和「[!UICONTROL 保護]」。 |
 
 {style="table-layout:auto"}
