--- a/c-legacy-releases/2023/01112023.md
+++ b/c-legacy-releases/2023/01112023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 22e2e4b0-b76a-429e-be83-b8a3c9f6e455
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '4026'
-ht-degree: 100%
+ht-degree: 95%
 
 ---
 
@@ -113,10 +113,10 @@ New videos, tutorials, or courses published for Adobe Experience Platform.
 | 2023 年 1 月 | [將值歸因於 Customer Journey 中的數位接觸點](https://experienceleague.adobe.com/docs/courses/using/analytics-u-1-2022-2-1-0.html) | 課程 | 了解熟悉網站訪客的重要層面。了解將他們帶到網站的原因，如何將您網站上的轉換評價分配給不同的管道，以及您網站上的其他項目如何推動轉換。 |
 | 2023 年 1 月 | [使用視覺效果來訴說您的資料故事](https://experienceleague.adobe.com/docs/courses/using/analytics-u-1-2022-1-visualizations-1-0.html) | 已更新的課程 | 了解如何使用視覺效果，以取得您所需的精確資料。此外，獲取一些秘訣和使用案例，以協助您讓視覺效果為定期分析助一臂之力。 |
 | 2023 年 1 月 | [使用自訂分段和日期篩選資料](https://experienceleague.adobe.com/docs/courses/using/analytics-u-1-2022-1-filterdata-1-0.html) | 已更新的課程 | 了解如何套用區段、建立自訂區段及使用日期範圍來篩選您的資料。 |
-| 2023 年 1 月 | [使用篩選器 (標記)](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/using-filters-tags-in-the-left-rail.html) | 已更新的影片 | 了解如何使用 Analysis Workspace 中的篩選器 (稱為標記)。這些是有助於您有效率地建置您專案的省時技巧。 |
+| 2023 年 1 月 | [使用篩選器 (標記)](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/using-filters-tags-in-the-left-rail.html) | 已更新的影片 | 瞭解如何在Analysis Workspace中使用篩選器（稱為標籤）。 這些是有助於您有效率地建置專案的省時技巧。 |
 | 2023 年 1 月 | [在 Analysis Workspace 中套用臨時區段](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/applying-segments/ad-hoc-temporary-segments.html?lang=zh-Hant) | 已更新的影片 | 了解如何快速建立簡易的區段來回答特定問題，然後捨棄該區段，以免佔用您已儲存區段的清單。 |
-| 2023 年 1 月 | [使用鍵盤快速鍵](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/keyboard-shortcuts.html) | 已更新的影片 | 了解如何使用 Analysis Workspace 中的鍵盤快速鍵。這些是有助於您在專案中進行各種任務的省時技巧。 |
-| 2023 年 1 月 | [複製和插入面板和視覺效果](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/copy-insert-analysis-workspace.html) | 已更新的影片 | 了解如何在 Analysis Workspace 中複製和插入面板和視覺效果。這些是調整目前專案或搶先一步進行新專案的省時技巧。 |
+| 2023 年 1 月 | [使用鍵盤快速鍵](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/keyboard-shortcuts.html) | 已更新的影片 | 瞭解如何使用Analysis Workspace中的鍵盤快速鍵。 這些是有助於您在專案中執行各種任務的省時技巧。 |
+| 2023 年 1 月 | [複製和插入面板和視覺效果](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/copy-insert-analysis-workspace.html) | 已更新的影片 | 瞭解如何在Analysis Workspace中複製和插入面板和視覺效果。 這些是調整目前專案或搶先一步進行新專案的省時技巧。 |
 
 {style="table-layout:auto"}
 
@@ -133,7 +133,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 1 月 | [使用 Report Builder 對 Customer Journey Analytics 活頁簿進行排程](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/exporting/report-builder/schedule-cja-workbooks-using-report-builder.html) | 影片 | 了解如何在 Report Builder 排程 Customer Journey Analytics 活頁簿。排程活頁簿可讓使用者以最新資料重新整理 Report Builder 活頁簿的程序自動化，並按照預先定義的定期排程將其傳送給利害關係人。 |
+| 2023 年 1 月 | [使用 Report Builder 對 Customer Journey Analytics 活頁簿進行排程](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/exporting/report-builder/schedule-cja-workbooks-using-report-builder.html) | 影片 | 瞭解如何排程Report Builder活頁簿以進行Customer Journey Analytics。 排程活頁簿可讓使用者以最新資料重新整理Report Builder活頁簿的程式自動化，並按照預先定義的定期排程將其傳送給利害關係人。 |
 | 2023 年 1 月 | [善用日期欄位支援](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/use-cases/data-views-use-cases/leverage-date-field-support.html) | 影片 | 您可以在 Customer Journey Analytics 內部使用日期和日期時間欄位。請選取日期或日期時間欄位的顯示方式，並在包含 / 排除功能中使用日期特定邏輯運算子，以篩選顯示的內容。 |
 | 2023 年 1 月 | [第一次和傳回工作階段](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/use-cases/data-views-use-cases/first-time-and-returning-sessions.html) | 影片 | 了解如何區別使用者的第一次和傳回工作階段。這會透過套用至您報告的 13 個月回顧達成。 |
 | 2023 年 1 月 | [使用實驗面板](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/panels/use-the-experimentation-panel.html) | 影片 | 了解如何設定和使用實驗面板，藉以根據您的實驗資料自動建置部分視覺效果。 |
@@ -185,7 +185,7 @@ _新功能_
 
 _發行前管道中可用的新功能_
 
-* Experience Manager Assets 現在為影像智慧標記使用改良的人工智慧框架。 此內容智慧可提高智慧標記的相關性和準確性，在擷取時可用於所有影像資產。此外，`cq:tags` 中會填入方向資訊，而能夠使用方向篩選器獲得更好的搜尋結果。
+* Experience Manager Assets現在為影像智慧標籤使用改良的人工智慧架構。 此內容智慧可提高智慧標記的相關性和準確性，在擷取時可用於所有影像資產。此外，方向資訊會填入`cq:tags`中，這樣可以使用「方向」篩選器獲得更好的搜尋結果。
 * 除了在連接到 Azure Blob 儲存體資料來源以使用大量匯入工具擷取資產時支援用於驗證的存取金鑰之外，Experience Manager Assets 現在還[支援 SAS 權杖](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html#asset-bulk-ingestor)。
 
 ### Experience Manager [!DNL Forms] as a [!DNL Cloud Service]
@@ -211,7 +211,7 @@ _新功能_
 
 * Experience Manager as a Cloud Service (作者服務) 現在和 Unified Shell 整合，以提升使用者體驗，並將其和所有其他 Experience Cloud 應用程式統一。如需更多詳細資訊，請參閱 [Unified Shell 上的 Experience Manager as a Cloud Service](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/overview/what-is-new-and-different.html#aem-updates)。
 * 如先前在發行說明中所述，使用複寫代理程式管理畫面或複寫 API 來分發大於 10 MB 的內容套件 (具有屬性的節點，不包括二進位檔案) 已過時。此限制將在未來幾天內執行。請參閱[管理出版物](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/operations/replication.html#manage-publication)或[發佈內容樹狀工作流程](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/operations/replication.html#publish-content-tree-workflow)，以了解複寫這些大型內容套件的建議方法。
-* Dispatcher 設定現在會參照一個列出常見行銷活動查詢參數的檔案。客戶可以選擇取消註釋與其相關的參數，從而促進快取。請參閱[行銷活動參數](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/content-delivery/caching.html#marketing-parameters)，以取得更多詳細資料。
+* Dispatcher設定現在會參照一個列出常見行銷活動查詢引數的檔案。 客戶可以選擇取消註解與其相關的引數，以獲得更好的快取。 請參閱[行銷活動參數](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/content-delivery/caching.html#marketing-parameters)，以取得更多詳細資料。
 
 ### [!DNL Cloud Manager]
 
