--- a/c-legacy-releases/2023/02082023.md
+++ b/c-legacy-releases/2023/02082023.md
@@ -234,7 +234,7 @@ _新功能_
 
 * Experience Manager as a Cloud Service (作者服務) 現在和 Unified Shell 整合，以提升使用者體驗，並將其和所有其他 Experience Cloud 應用程式統一。如需更多詳細資訊，請參閱 [Unified Shell 上的 Experience Manager as a Cloud Service](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/overview/what-is-new-and-different.html#aem-updates)。
 * 如先前在發行說明中所述，使用複寫代理程式管理畫面或複寫 API 來分發大於 10 MB 的內容套件 (具有屬性的節點，不包括二進位檔案) 已過時。此限制將在未來幾天內執行。請參閱[管理出版物](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/operations/replication.html#manage-publication)或[發佈內容樹狀工作流程](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/operations/replication.html#publish-content-tree-workflow)，以了解複寫這些大型內容套件的建議方法。
-* Dispatcher 設定現在會參照一個列出常見行銷活動查詢參數的檔案。客戶可以選擇取消註釋與其相關的參數，從而促進快取。請參閱[行銷活動參數](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/content-delivery/caching.html#marketing-parameters)，以取得更多詳細資料。
+* Dispatcher設定現在會參照一個列出常見行銷活動查詢引數的檔案。 客戶可以選擇取消註解與其相關的引數，以獲得更好的快取。 請參閱[行銷活動參數](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/content-delivery/caching.html#marketing-parameters)，以取得更多詳細資料。
 
 ### [!DNL Cloud Manager]
 
