--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -9,7 +9,7 @@ exl-id: bff918b2-1f21-4375-af54-312347de0b2f
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
 workflow-type: tm+mt
 source-wordcount: '3630'
-ht-degree: 99%
+ht-degree: 98%
 
 ---
 
@@ -227,7 +227,7 @@ For self-help resources, see [Audience Manager documentation and tutorials](http
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
-Adobe 建議您瀏覽以下資源，以隨時掌握發布內容資訊：
+Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
 * [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
@@ -278,10 +278,10 @@ _發行前管道中可用的新功能_
 
 _新功能_
 
-* 作者可以使用體驗片段以動態的方式豐富產品清單 (例如：在產品列表之間放置橫幅)。
-* 清單元件現在支援相關聯產品/類別頁面以動態顯示相關頁面。
-* 已新增 Peregrine 12.5 元件的支援。
-* 已新增對產品預告和輪播中用戶端價格載入的支援。
+* 作者可以使用體驗片段以動態方式豐富產品清單（例如：在產品清單之間放置橫幅）。
+* 清單元件現在支援相關聯的產品/類別頁面，以動態顯示相關頁面。
+* 已新增對Peregrine 12.5元件的支援。
+* 已新增對產品Teaser和輪播中使用者端價格載入的支援。
 
 ### [!DNL Experience Manager as a Cloud Service] Foundation
 
