--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -9,11 +9,11 @@ exl-id: 50843662-c272-43de-a737-04a0ee20cb0b
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
 workflow-type: tm+mt
 source-wordcount: '4306'
-ht-degree: 99%
+ht-degree: 98%
 
 ---
 
-# Experience Cloud版本注意事項 — 2023年5月
+# Experience Cloud 發行說明 - 2023 年 5 月
 
 ![橫幅](assets/release-notes-header.png)
 
@@ -248,7 +248,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
-Adobe 建議您瀏覽以下資源，以隨時掌握發布內容資訊：
+Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
 * [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
@@ -273,7 +273,7 @@ _新功能_
    * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗。
    * DASH 是自適應影片串流的國際標準通訊協定，在業界被廣泛採用。
    * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html#enable-dash)。歐洲、中東和非洲地區即將提供。
-* 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧型標記和智慧型裁切功能。
+* 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧標籤和智慧裁切功能。
 
 ### [!DNL Experience Manager Forms] as a [!DNL Cloud Service]
 
@@ -289,7 +289,7 @@ _新功能_
 
 ### Headless 調適型表單早期採用者計劃
 
-使用 Headless 最適化表單讓您的開發人員能夠建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：
+使用Headless最適化Forms ，讓您的開發人員能建立、發佈和管理可透過API （而非透過傳統圖形使用者介面）存取和互動的互動式表單。 Headless 調適型表單可協助您：
 
 * 使用您選擇的程式語言建置高品質的多管道表單。
 * 以原生方式將表單整合到您的桌面和行動應用程式、網站和聊天應用程式
