--- a/c-legacy-releases/2023/07122023.md
+++ b/c-legacy-releases/2023/07122023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 6180abeb-9d5f-4a23-bbcd-ebb7f4407398
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '4610'
-ht-degree: 100%
+ht-degree: 98%
 
 ---
 
@@ -306,9 +306,9 @@ _新功能_
 
 _Assets 視圖中的新功能：_
 
-**資產的階層式標記可提供更快速的搜尋體驗**
+**資產的階層式標籤，以獲得更快的搜尋體驗**
 
-受控詞彙的平面清單會隨著時間推移而變得難以管理。Assets 視圖現在支援[標記階層結構](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/tagging-management-assets-view.html)，這有助於套用相關的中繼資料、將資產分類、支援搜尋、重複使用標記、提高易尋性等。
+控制辭彙的平面清單會隨著時間而變得無法管理。 Assets 視圖現在支援[標記階層結構](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/tagging-management-assets-view.html)，這有助於套用相關的中繼資料、將資產分類、支援搜尋、重複使用標記、提高易尋性等。
 
 **釘選檔案、資料夾和集合以便快速存取**
 
@@ -316,7 +316,7 @@ _Assets 視圖中的新功能：_
 
 **篩選「垃圾桶」資料夾的資產**
 
-Assets 視圖現在可讓您[篩選「垃圾桶」資料夾中的資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/navigate-assets-view.html)。您也可以套用標準或自訂篩選條件搜尋「垃圾桶」資料夾中的適當資產，以恢復或永久刪除。
+Assets 視圖現在可讓您[篩選「垃圾桶」資料夾中的資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/navigate-assets-view.html)。您可以套用標準或自訂篩選器，在垃圾桶資料夾中搜尋適當的資產，以還原或永久刪除它們。
 
 **3D 資產的縮圖預覽**
 
@@ -340,9 +340,9 @@ _Forms 的可用新功能_
 
 藉由與政府適用的 Adobe Acrobat Sign Solutions 整合，在一些最重要的關鍵任務和敏感業務線，Adobe 的合作夥伴和政府客戶便可以在[!UICONTROL 最適化表單]使用電子簽名。這額外一層的安全性可確保所有電子簽名完全符合 FedRAMP 中等合規性，讓 Adobe 的政府客戶安心使用。
 
-* [使用規則編輯器中的自訂錯誤處理常式增強錯誤處理](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-rules-and-use-expressions-in-an-adaptive-form/add-custom-error-handler-adaptive-forms.html)：您現在可以呼叫自訂函數 (使用用戶端資料庫) 來回應外部服務傳回的錯誤，並為一般使用者提供量身打造的回應。或者，您可以針對服務傳回的錯誤採取特定動作。例如，您可以針對特定錯誤程式碼在後端叫用自訂工作流程，或通知客戶服務已關閉。
+* [使用規則編輯器中的自訂錯誤處理常式增強錯誤處理](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-rules-and-use-expressions-in-an-adaptive-form/add-custom-error-handler-adaptive-forms.html)：您現在可以呼叫自訂函數 (使用用戶端資料庫) 來回應外部服務傳回的錯誤，並為一般使用者提供量身打造的回應。或者，您也可以對服務傳回的錯誤採取特定動作。 例如，您可以針對特定錯誤程式碼在後端叫用自訂工作流程，或通知客戶服務已關閉。
 
-此功能有助於引進標準型錯誤回應來提高整體的錯誤處理能力；這些回應向後相容於 OOTB 錯誤處理常式，且具有更大的彈性和控制性。
+此功能引進了可回溯相容於OOTB錯誤處理常式的標準錯誤回應，並具備更優異的彈性和控制能力，有助於改善您的整體錯誤處理能力。
 
 [表單資料模型的增強身份驗證方法](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html)：透過引入以客戶端憑證為主的身份驗證，將 AEM Forms (表單資料模型) 與相鏥的資料來源連接起來，體驗更高的安全性。此增強功能減少了模擬或用戶登入程序，加強對您的資料保護。
 
