--- a/c-legacy-releases/2023/08092023.md
+++ b/c-legacy-releases/2023/08092023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: f61fcb42-2eba-4993-9543-2b316ae718a6
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '4254'
-ht-degree: 100%
+ht-degree: 98%
 
 ---
 
@@ -318,7 +318,7 @@ _新功能_
 
 * **[現成可用的主題和範本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html?lang=zh-Hant)** – 使用 Adobe 現成可用的主題和範本啟動您的表單建立流程；這些主題和範本都是專為支援經驗豐富的專業人士和新表單作者而量身打造。這些精心策劃、使用最適化表單元核心元件無縫建置的主題和範本，可讓您迅速地開始針對常見使用案例來建立表單。
 * **Headless 表單的 React 元件** – 您現在可以使用現成的 React 元件預覽和自訂 Headless 最適化表單轉譯。這些元件會運用最適化表單核心元件中的 BEM 類別進行樣式設定，讓您能夠輕鬆地根據特定需求自訂其外觀。
-* **[建立具有可重複區段的最適化表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/create-forms-repeatable-sections.html?lang=zh-Hant)** – 現在起，您可以製作可重複進行多筆資料記錄擷取，並以[折疊式](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/accordion.html?lang=zh-Hant)、[精靈](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/wizard.html?lang=zh-Hant)、[面板](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/panel-container.html?lang=zh-Hant)和[水平索引標籤](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/horizontal-tabs.html?lang=zh-Hant)等元件為主的最適化表單。這些可重複的區段可讓您輕鬆提供多個資料條目。事先不知道所需的資料實例時，此功能非常有用。填表人可輕鬆新增或移除區段，使表單可依不同資料輸入情境進行調整，並簡化相同資料紀錄多次出現的收集作業。
+* **[建立具有可重複區段的最適化表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/create-forms-repeatable-sections.html?lang=zh-Hant)** – 現在起，您可以製作可重複進行多筆資料記錄擷取，並以[折疊式](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/accordion.html?lang=zh-Hant)、[精靈](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/wizard.html?lang=zh-Hant)、[面板](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/panel-container.html?lang=zh-Hant)和[水平索引標籤](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/adaptive-forms-components/horizontal-tabs.html?lang=zh-Hant)等元件為主的最適化表單。這些可重複的區段可讓您輕鬆提供多個資料專案。 事先不知道所需的資料實例時，此功能非常有用。表單填寫器可輕鬆新增或移除區段，使表單能適應不同的資料輸入情境，並簡化相同資料記錄多次出現次數的收集。
 
 _搶鮮版管道的新功能_
 
@@ -343,9 +343,9 @@ _搶鮮版管道的新功能_
    * 要求的標頭和屬性 (例如 IP 位址)
    * 已知與惡意流量相關聯的流量模式
 
-  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。名額有限。
+  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。空間有限。
 
-  若要深入了解該功能，請點選[這裡](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)參閱文章。
+  在文章[此處](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)中進一步瞭解此功能。
 * **其他基礎變更** – 在 2023 年 8 月 7 日這一週，對 AEM 執行個體的要求超出健康水準時，AEM 會傳回錯誤代碼 429，而不是錯誤代碼 503。[了解更多](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/development-guidelines.html?lang=zh-Hant)。
 
 ### [!DNL Cloud Manager]
