--- a/c-legacy-releases/2023/09132023.md
+++ b/c-legacy-releases/2023/09132023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: f56478de-79d0-4bfe-9468-e6f6619dd814
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '5807'
-ht-degree: 100%
+ht-degree: 98%
 
 ---
 
@@ -307,7 +307,7 @@ _新功能_
 
 _資產檢視中的新功能_
 
-* **從資料來源大量匯入資產** – 管理員現在可以將資料來源的[多個資產匯入](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/bulk-import-assets-view.html?lang=zh-Hant) AEM Assets。管理員不再需要將個別資產或資料夾上傳到 AEM Assets。支援大量匯入的資料來源包括 Azure、AWS、Google 雲端和 Dropbox。
+* **從資料來源大量匯入資產** – 管理員現在可以將資料來源的[多個資產匯入](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/bulk-import-assets-view.html?lang=zh-Hant) AEM Assets。管理員不再需要將個別資產或資料夾上傳到AEM Assets。 大量匯入支援的資料來源包括Azure、AWS、Google Cloud和Dropbox。
 * **由 Adobe Express 提供技術支援的影像編輯工具** – 簡單直觀的[影像編輯工具是由 Adobe Express 提供技術支援，](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/edit-images-assets-view.html?lang=zh-Hant)可直接在 AEM Assets 中使用，以增加內容重複使用性並加快內容流通速度。
 * **為「我的工作區」的「快速存取」釘選項目時的靈活性** – 能夠為您的組織或群組清單選擇和釘選項目，以便它們顯示在[「我的工作區」的「快速存取」部分](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/assets-view/my-workspace-assets-view.html?lang=zh-Hant)。
 
@@ -346,8 +346,8 @@ _搶鮮版管道的新功能_
 
 使用 [Headless 調適型表單](https://experienceleague.adobe.com/docs/experience-manager-headless-adaptive-forms/using/overview.html?lang=zh-Hant)可讓開發人員建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：
 
-* 使用您選擇的程式語言建置高品質的多管道表單
-* 以原生方式將表單整合到您的桌面和行動應用程式、網站和聊天應用程式
+* 以您選擇的程式語言建置高品質的多管道表單
+* 以原生方式將表單整合至您的案頭和行動應用程式、網站和聊天應用程式
 * 在表單應用程式中重複使用您的專屬使用者介面元件
 * 使用 AEM Forms 的強大功能
 
@@ -361,9 +361,9 @@ _搶鮮版管道的新功能_
    * 要求的標頭和屬性 (例如 IP 位址)
    * 與惡意流量相關聯的已知流量模式
 
-  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。名額有限。
+  有興趣嘗試該功能並分享回饋意見嗎？若要深入了解早期採用者計劃，請從您的官方電子郵件 ID 寄送電子郵件到 [aemcs-waf-adopter@adobe.com](mailto:aemcs-waf-adopter@adobe.com)。空間有限。
 
-  若要深入了解該功能，請點選[這裡](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)參閱文章。
+  在文章[此處](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/security/cdn-and-waf-rules.html?lang=zh-Hant)中進一步瞭解此功能。
 
 ### [!DNL Cloud Manager]
 
@@ -398,8 +398,8 @@ _早期採用者計劃_
 * 現在起，觸發[複製內容](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developer-tools/content-copy.html?lang=zh-Hant)強制回應之後就會關閉「環境」選單。
 * 如果前一個執行在建置階段狀態上未設定 commitId，就不會再允許[管道重新執行](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/deploy-code.html?lang=zh-Hant#reexecute-deployment)。
 * 使用者在「活動」或「管道」畫面選取管道時，如果出現不常見的錯誤，現在會顯示更容易理解的訊息。
-* 記錄中不再缺少 `contentSetName` 值，現在在啟動[內容複製](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developer-tools/content-copy.html?lang=zh-Hant)作業時即會在輸入中提供。
-* 在特定的少數情況下，從同一個管道啟動兩次執行，以致於造成「停滯」狀態的情況不再可能發生。
+* `contentSetName`值在記錄中不再遺失，現在在啟動[內容複製](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developer-tools/content-copy.html?lang=zh-Hant)作業時，會提供在輸入中。
+* 在某些罕見情況下，不再可以從同一管道開始兩個執行，導致「卡住」狀態。
 * 憑證到期時，與該憑證相關聯的網域名稱和 IP 允許清單不會再從 CDN 中移除。
    * 在這種情況下，網站仍接受訪客造訪。
    * [Cloud Manager 使用者介面](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-ssl-certificates/introduction.html?lang=zh-Hant)提供更明顯的警告來表示 SSL 憑證即將到期。
